--- a/about.html
+++ b/about.html
@@ -32,15 +32,15 @@
 
 <!-- skills section starts  -->
 
-<section class="skills">
+    <section class="skills">
 
-    <h1 class="heading"> <span>my</span> skills </h1>
+        <h1 class="heading"> <span>my</span> skills </h1>
 
-    <div class="box-container">
-        <div class="box">
-            <img src="images/icon-1.png">
-            <h3>html</h3>
-        </div>
+        <div class="box-container">
+            <div class="box">
+                <img src="images/icon-1.png">
+                <h3>html</h3>
+            </div>
         <div class="box">
             <img src="images/icon-2.png">
             <h3>css</h3>
@@ -61,16 +61,16 @@
             <img src="images/icon-6.png">
             <h3>react.js</h3>
         </div>
+            <div class="box">
+                <img src="images/github.png">
+                <h3>github</h3>
+            </div>
         <div class="box">
-            <img src="images/github.png">
-            <h3>github</h3>
+                <img src="images/php1-removebg-preview.png">
+                <h3>PHP</h3>
+            </div>
         </div>
-        <div class="box">
-            <img src="images/adobeai.avif">
-            <h3>adobeai</h3>
-        </div>
-    </div>
 
-</section>
+    </section>
 </body>
 </html>
