--- a/portfolio.html
+++ b/portfolio.html
@@ -43,49 +43,63 @@
         </div>
 
         <div class="box">
-            <img src="images/img-2.png" alt="">
+            <img src="images/Librarymanagement.png" alt="">
             <div class="content">
                 <h3>Website library Management</h3>
-                <a href="https://auufa.github.io/library_management/">read more</a>
+                <a href="https://github.com/Auufa/library_management.git">read more</a>
             </div>
         </div>
        
         <div class="box">
-            <img src="images/img-3.png" alt="">
+    <img src="images/delivery.png" alt="">
+    <div class="content">
+        <h3>Figma Design</h3>
+        <p>Desain prototipe aplikasi pemesanan di Figma</p>
+        <a href="https://www.figma.com/proto/VZHX1ibV5RyCKan2Fp8qTQ/Pertemuan-Pertama-Figma?node-id=25-495&starting-point-node-id=25%3A494" target="_blank">lihat di Figma</a>
+    </div>
+</div>
+
+        <div class="box">
+            <img src="images/hotels.png" alt="">
             <div class="content">
-                <h3>Chess</h3>
-                <p>Chess is a board game played between two players.</p>
-                <a href="https://naemazam.github.io/Online-Chess/">read more</a>
+                <h3>Website Pemesanan Hotel</h3>
+                <a href="https://github.com/Auufa/Latihan_BNSP_Hotel.git">read more</a>
             </div>
         </div>
 
         <div class="box">
-            <img src="images/img-4.png" alt="">
+            <img src="images/beasiswa.png" alt="">
             <div class="content">
-                <h3>Need Linux</h3>
-                <p>Hi, Tux User, It's Time For Make A world of Open Source</p>
-                <a href="https://need-linux.github.io/">read more</a>
+                <h3>Website Beasiswa</h3>
+                <a href="https://github.com/Auufa/Latihan_BNSP_Beasiswa.git">read more</a>
             </div>
         </div>
 
         <div class="box">
-            <img src="images/img-5.png" alt="">
+            <img src="images/figma_furni.png" alt="">
             <div class="content">
-                <h3>CV Baba</h3>
-                <p>Make your Resume
-                    look really good.</p>
-                <a href="https://naemazam.github.io/CV_Baba/">read more</a>
+                <h3>Figma Design</h3>
+                <p>Desain prototipe website di Figma</p>
+                <a href="https://www.figma.com/proto/M1F1ngR0smatI6aTDuizlM/Penugasan?node-id=1-3" target="_blank">lihat di Figma</a>
             </div>
         </div>
 
         <div class="box">
-            <img src="images/img-6.png" alt="">
+            <img src="images/techexperience.png" alt="">
             <div class="content">
-                <h3>Soft UI</h3>
-                <p>Perfect Soft UI Portfolio</p>
-                <a href="#">read more</a>
+                <h3>Aplikasi TechExperience</h3>
+                <a href="https://github.com/Auufa/STS_Techxperience.git" target="_blank">read more</a>
             </div>
         </div>
+
+        <div class="box">
+            <img src="images/ternakuangapp.png" alt="">
+            <div class="content">
+                <h3>Aplikasi Ternak Uang</h3>
+                <a href="https://github.com/Auufa/Ternakuang_appmobile.git" target="_blank">read more</a>
+            </div>
+        </div>
+
 
     </div>
 
