--- a/index.html
+++ b/index.html
@@ -35,10 +35,10 @@
     </div>
 
     <div class="content">
-        <h3>hi, saya Aufa Irfan Adli</h3>
+        <h3>hi, saya Aufa</h3>
         <span>Software Developer</span>
         <p>Portofolio ini berisi kumpulan proyek dan karya terbaik saya selama menempuh pendidikan di jurusan Rekayasa Perangkat Lunak (RPL). Setiap proyek mencerminkan kemampuan saya dalam merancang, membangun, dan mengembangkan perangkat lunak dengan pendekatan yang terstruktur dan efisien.</p>
-        <a href="about.html" class="btn"> about me <i class="fas fa-user"></i> </a>
+        <a href="about.html" class="btn"> about me <i class="fas fa-user"></i> </a>     
     </div>
 
 </section>
