--- a/portfolio.html
+++ b/portfolio.html
@@ -100,6 +100,16 @@
             </div>
         </div>
 
+        <div class="box">
+            <img src="images/Website Hotel.jpeg" alt="">
+            <div class="content">
+                <h3>Website Pemesanan Kamar Hotel</h3>
+                <a href="https://github.com/Auufa/BNSP_Hotel.git" target="_blank">read more</a>
+            </div>
+        </div>
+
+        
+
 
     </div>
 
