update nambah projek

--- a/portfolio.html
+++ b/portfolio.html
@@ -12,6 +12,10 @@
     <!-- custom css file link  -->
     <link rel="stylesheet" href="css/style.css">
 
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/lightbox2/2.11.3/css/lightbox.min.css">
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/lightbox2/2.11.3/js/lightbox.min.js"></script>
+
+
 </head>
 <body>
     
@@ -107,6 +111,16 @@
                 <a href="https://github.com/Auufa/BNSP_Hotel.git" target="_blank">read more</a>
             </div>
         </div>
+
+        <div class="box">
+            <img src="images/Project1_PKL.jpeg" alt="">
+            <div class="content">
+                <h3>Template Landing Page WordPress</h3>
+                <a href="images/Project1_PKL.jpeg" data-lightbox="company" data-title="Website Company Profile">read more</a>
+            </div>
+        </div>
+
+
 
         
 
